# mgp

./: README.md  mgp.cabal
app/: Main.hs
