name:                mgp
version:             0.1.0.0
synopsis:            Mathematical Genealogy Project web scraping
description:         Web scraping for the Mathematical Genealogy Project
homepage:            https://github.com/rhz/mgp
license:             BSD3
author:              Ricardo
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Lib
--   build-depends:       base >= 4.7 && < 5
--   default-language:    Haskell2010

executable mgp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , lens
                     , wreq
                     , taggy-lens
                     , containers
                  -- , mgp
  default-language:    Haskell2010

-- test-suite mgp-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , mgp
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rhz/mgp
